# plover-json-lazy

./: README.md  setup.cfg
plover_json_lazy/: __init__.py
