[metadata]
name = plover_json_lazy
version = 0.0.0
author = user202729
description = Plover dictionary plugin to load JSON dictionaries faster the first time.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/user202729/plover_json_lazy
classifiers =
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev8
packages = plover_json_lazy

[options.entry_points]
plover.dictionary =
	json = plover_json_lazy:LazyJsonDictionary
